wip: fallback to jdk 11
refactor: replace `fontawesomefx` with `ikonli`

fix: proper maven & modular project setup