@@ -13,21 +13,22 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>17.0.1</version>
+      <version>11.0.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>17.0.1</version>
+      <version>11.0.2</version>
     </dependency>
 
     <dependency>
@@ -41,6 +42,19 @@
       <artifactId>jfoenix</artifactId>
       <version>9.0.10</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-javafx</artifactId>
+      <version>12.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-materialdesign2-pack</artifactId>
+      <version>12.3.1</version>
+    </dependency>
+
     <dependency>
       <groupId>io.socket</groupId>
       <artifactId>socket.io-client</artifactId>
@@ -51,12 +65,76 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <!-- put your configurations here -->
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>Main</mainClass>
+          <mainClass>transmitter.Main</mainClass>
+          <!-- required workaround for jfoenix -->
+          <options>
+            <option> --add-opens </option>
+            <option> java.base/java.lang.reflect=com.jfoenix </option>
+
+            <option> --add-opens </option>
+            <option> javafx.graphics/javafx.css=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.base/com.sun.javafx.runtime=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.base/com.sun.javafx.binding=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.base/com.sun.javafx.event=ALL-UNNAMED </option>
+            <option> --add-opens </option>
+            <option> javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED </option>
+
+            <option> --add-exports </option>
+            <option> javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix </option>
+            <option> --add-exports </option>
+            <option> javafx.controls/com.sun.javafx.scene.control=com.jfoenix </option>
+            <option> --add-exports </option>
+            <option> javafx.base/com.sun.javafx.binding=com.jfoenix </option>
+            <option> --add-exports </option>
+            <option> javafx.graphics/com.sun.javafx.stage=com.jfoenix </option>
+            <option> --add-exports </option>
+            <option> javafx.graphics/com.sun.javafx.scene=com.jfoenix </option>
+            <option> --add-exports </option>
+            <option> javafx.base/com.sun.javafx.event=com.jfoenix </option>
+          </options>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.4</version>
+        <configuration>
+          <!-- put your configurations here -->
+          <configuration>
+            <transformers>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+            </transformers>
+          </configuration>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
